--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"Default": "Host=localhost;Port=5632;Database=HomeDEV;Username=app;Password={ConnectionStringPassword};Persist Security Info=True;",
-    "Default": "Host=178.19.245.181;Port=55632;Database=VkActivity;Username=postgres;Password=postgres;Persist Security Info=True;"
+    "Default": "Host=localhost;Port=5632;Database=HomeDEV;Username=app;Password={ConnectionStringPassword};Persist Security Info=True;",
   },
 
   "Vk": {
