--- a/src/VkActivity.Service.Hangfire/Properties/launchSettings.json
+++ b/src/VkActivity.Service.Hangfire/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50515",
+      "applicationUrl": "http://localhost:10438",
       "sslPort": 0
     }
   },
   "profiles": {
-    "VkActivity.Service": {
+    "VkActivity.Service.Hangfire": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5230",
+      "applicationUrl": "http://localhost:5043",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
