VkActivity.Service: BackgroundService+API works correct! VkActivity.Data: base repo changes

--- a/src/VkActivity.Service/appsettings.json
+++ b/src/VkActivity.Service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5632;Database=VkActivityDEV;Username=app;Password={ConnectionStringPassword};Persist Security Info=True;"
+    "Default": ""
   },
 
   "Vk": {
@@ -44,5 +44,11 @@
 
   "ConnectionAnalyser": {
     "Urls": [ "https://vk.com/", "https://yandex.ru/", "https://www.google.ru/" ]
+  },
+
+  "Swagger": {
+    "ApiTitle": "VkActivity.Service.API",
+    "ApiVersion": "v1",
+    "EndpointUrl": "/swagger/v1/swagger.json"
   }
 }
