--- a/src/VkActivity.Worker/VkActivity.Worker.csproj
+++ b/src/VkActivity.Worker/VkActivity.Worker.csproj
@@ -20,16 +20,15 @@
     </PropertyGroup>
     -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Hosting.WindowsServices" Version="6.0.4" />
+        <!--<PackageReference Include="Microsoft.AspNetCore.Hosting.WindowsServices" Version="6.0.4" />-->
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="6.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
         
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <!--<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />-->
         <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
