--- a/tests/IntegrationTests/Worker.IntegrationTests.csproj
+++ b/tests/IntegrationTests/Worker.IntegrationTests.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <UserSecretsId>94f2e4a2-6fe3-4582-acc5-addd59b3c48f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnitTests\UnitTests.csproj" />
+    <ProjectReference Include="..\UnitTests\Worker.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
