fix: appsettings.json

--- a/src/VkActivity.API/appsettings.json
+++ b/src/VkActivity.API/appsettings.json
@@ -4,8 +4,8 @@
   },
 
   "Vk": {
-    "ApiVersion": 5.122,
-    "ApiToken": "{VkApiToken}"
+    "Version": 5.122,
+    "AccessToken": "{VkApiToken}"
   },
 
   "Swagger": {
