--- a/src/VkActivity.API/VkActivity.Api.csproj
+++ b/src/VkActivity.API/VkActivity.Api.csproj
@@ -4,6 +4,10 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+    	<PublishTrimmed>true</PublishTrimmed>
+    	<PublishSingleFile>true</PublishSingleFile>
+    	<SelfContained>true</SelfContained>
+    	<RuntimeIdentifier>linux-x64</RuntimeIdentifier>
 		<UserSecretsId>4eb273fc-611b-4266-86a1-e3d51b30a9f1</UserSecretsId>
 	</PropertyGroup>
 
