--- a/tests/Worker.IntegrationTests/Worker.IntegrationTests.csproj
+++ b/tests/Worker.IntegrationTests/Worker.IntegrationTests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UnitTests\Worker.UnitTests.csproj" />
+    <ProjectReference Include="..\Worker.UnitTests\Worker.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
